--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,11 @@
     {
       "path": "./e2e/tsconfig.json"
     }
-]
+  ],
+  "compilerOptions": {
+    "strict": true
+  },
+  "augularCompilerOptions":{
+    "strictTemplates": true
+  }
 }
